[package]
name = "google-medium-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4" }
scraper = "0.12.0" # html parsing
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
num_cpus = "1.13.0"
image = "0.23.14"