[package]
name = "mium"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
codegen-units = 1
lto = "fat"

[dependencies]
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls"] }
scraper = { version = "0.12.0", default-features = false }
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }
num_cpus = "1.13.0"
image = { version = "0.23.14", default-features = false, features = ["jpeg"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
structopt = { version = "0.3.22", default-features = false }
tui = "0.16.0"
termion = "1.5"
unicode-width = "0.1.9"
anyhow = "1.0.44"
crossbeam-channel = "0.5.1"